--- a/index.html
+++ b/index.html
@@ -1,19 +1,254 @@
+<head>
 
-<html>
-<title>
-First website
-</title>
+<title>Resume: Rodriguez, Adrian</title>
 
-<body>
-<h1>This is my first github page</h1>
-</body>
+
 
 <style>
-body {
-background-color:green;
-color:#fff;
-text-align:center;
+.header{
+height: 75px;
+width: 100%;
+background-color: rgba(70,130,180, 0.2);
+font-size: 40px;
+border-radius:15px;
 }
+
+.headertext
+{
+font-family:calibri;
+padding-top:14px;
+color:white;
+text-align:left;
+}
+
+.backgroundimg{
+background-image:url(http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-24.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+.bodyp
+{
+text-align:center;
+color:white;
+font-size:40px;
+font-family:Arial;
+}
+
+.quotediv{
+margin-top: 70px;
+height:70px;
+width: 100%;
+background-color: rgba(70,130,180, 0.2);
+border-radius:15px;
+}
+
+.quote {
+text-align:left;
+color:white;
+font-size:25px;
+font-family:calibri;
+padding-top:25px;
+padding-left:17px;
+}
+
+.profile{
+margin-top: 70px;
+height: 290px;
+width: 33.33%;
+background-color: rgba(70,130,180, 0.2);
+margin-left:33.33%;
+border-radius:15px;
+}
+
+.profiletxt{
+text-align:center;
+color:white;
+font-size:24px;
+font-family: calibri;
+padding-top:25px;
+padding-left:17px;
+}
+
+.educ{
+margin-top: 30px;
+height: 220px;
+width: 33.33%;
+background-color: rgba(70,130,180, 0.2);
+border-radius:15px;
+}
+
+.eductxt{
+text-align:left;
+color:white;
+font-size:23px;
+font-family:calibri;
+padding-top:20px;
+padding-left:17px;
+}
+
+.skills{
+margin-top: 30px;
+height: 220px;
+width: 33.33%;
+background-color: rgba(70,130,180, 0.2);
+float:right;
+border-radius:15px;
+}
+
+.skillstxt{
+text-align:left;
+color:white;
+font-size:23px;
+font-family:calibri;
+padding-left:20px;
+}
+
+.skillsli{
+text-align:left;
+color:white;
+font-size:23px;
+font-family:calibri;
+padding-top:15px;
+padding-left:35px;
+}
+
+.contact{
+margin-top: 30px;
+height: 290px;
+width: 33.33%;
+background-color: rgba(70,130,180, 0.2);
+margin-left:33.33%;
+border-radius:15px;
+}
+
+.contacttxt{
+text-align:center;
+color:white;
+font-size:24px;
+font-family:calibri;
+padding-top:17px;
+}
+
+.pic{
+border-radius:50%;
+background-color: rgba(70,130,180, 0.2);
+float:right;
+width: 250px;
+height: 250px;
+margin-right:100px;
+margin-top:15.5px;
+}
+
+.pictxt{
+text-align:center;
+color:white;
+font-size:40px;
+font-family:calibri;
+padding-left:12px;
+padding-top:11px;
+}
+.dp{
+
+border-radius:50%;
+height:250px;
+width:250px;
+float:left;
+}
+
+
 </style>
 
+</head>
+
+ <body class = "backgroundimg">
+ 
+<div class = "header">
+<img src="https://image.ibb.co/d4fdec/pic.jpg" alt="pic" class = "dp">
+<p class = "headertext"><b>&nbsp;&nbsp;&nbsp;ADRIAN RODRIGUEZ</b></p>
+
+</div>
+
+<div class = "profile">
+<p class = "profiletxt">
+
+<b><i>Personal Information</b></i><br><br>
+
+
+<b>Date of Birth</b>
+<br>
+November 29, 2001
+<br><br>
+<b>Location</b>
+<br>
+Block 4 Lot 6A Villa Roma Subd.<br>
+Tabe, Guiguinto, Bulacan
+
+</p>
+
+</div>
+<div class = "skills">
+<p class = "skillstxt">
+<b><i>Special Skills</i></b>
+<ul class = "skillsli">
+<li>Capable of designing webpages using the HTML5 language</li>
+
+<li>Focused, patient, and persistent</li>
+<li>Exhibits critical thinking skills</li>
+
+<ul>
+
+</p>
+</div>
+<div class = "pic">
+<p class = "pictxt">
+<b>READY <BR> FOR THE <BR> FUTURE</p></b>	
+</div>
+<div class = "educ">
+<p class = "eductxt">
+
+<b><i>Educational Background</b></i><br><br>
+
+<b>Junior High School</b>
+<br>
+Holy Spirit Academy of Malolos<br>
+Bagong Bayan, City of Malolos, Bulacan<br>
+June 2013 - March 2017
+
+<br><br>
+
+
+</p>
+
+</div>
+
+
+<div class = "contact">
+<p class = "contacttxt">
+
+<b><i>Contact Information</b></i><br><br>
+
+<b>Email Address</b>
+<br>
+rdrgzadr@gmail.com<br><br>
+<b>Contact Numbers</B><br>
++63 943-549-2275<br>
++63 998-086-3452
+
+
+
+
+</p>
+
+</div>
+
+
+
+<div class = "quotediv">
+<p class = "quote">
+<i>"You have to perform at a consistently higher level than others. That's the mark of a true professional."</i> - Joe Paterno
+</p>
+</div>
+</body>
 </html>
