--- a/index.html
+++ b/index.html
@@ -1,254 +1,123 @@
-<head>
-
-<title>Resume: Rodriguez, Adrian</title>
-
-
-
-<style>
-.header{
-height: 75px;
-width: 100%;
-background-color: rgba(70,130,180, 0.2);
-font-size: 40px;
-border-radius:15px;
+<html>
+<meta charset="utf-8">
+	<title>
+		MJ Tampipeg's Resume
+	</title>
+<style type="text/css">
+.A {
+height: 200px;
+width: 205px;
+margin-left: 5%;
+margin-top: 5%;
+float: center;
+border-color: black;
+border-width: 5px;
+border-style: solid;
+border-radius: 50%;
 }
 
-.headertext
+.C {
+height: 290px; 
+width: 70%; 
+position: static; 
+opacity: 0.6; 
+background-color: black; 
+float: center; 
+margin-left: 25%; 
+margin-top: 2%; 
+color: white; 
+font-family: Century Gothic; 
+font-size: 15px; 
+}
+
+.D
 {
-font-family:calibri;
-padding-top:14px;
-color:white;
-text-align:left;
+height: 550px; 
+width: 49%; 
+position: static; 
+opacity: 0.6; 
+background-color: black; 
+float: right; 
+margin-left: 0.5%; 
+margin-right: 0.5%;
+margin-top: 2%; 
+color: white; 
+font-family: Century Gothic; 
+font-size: 18px; 
 }
 
-.backgroundimg{
-background-image:url(http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/minimalist-design-1-wallpaper/1920x1200/free-wallpaper-24.jpg);
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-}
-
-.bodyp
+.E
 {
-text-align:center;
-color:white;
-font-size:40px;
-font-family:Arial;
+height: 550px; 
+width: 49%; 
+position: static; 
+opacity: 0.6; 
+background-color: black; 
+float: left; 
+margin-left: 0.5%; 
+margin-right: 0.5%;
+margin-top: 2%; 
+color: white; 
+font-family: Century Gothic; 
+font-size: 18px; 
 }
-
-.quotediv{
-margin-top: 70px;
-height:70px;
-width: 100%;
-background-color: rgba(70,130,180, 0.2);
-border-radius:15px;
-}
-
-.quote {
-text-align:left;
-color:white;
-font-size:25px;
-font-family:calibri;
-padding-top:25px;
-padding-left:17px;
-}
-
-.profile{
-margin-top: 70px;
-height: 290px;
-width: 33.33%;
-background-color: rgba(70,130,180, 0.2);
-margin-left:33.33%;
-border-radius:15px;
-}
-
-.profiletxt{
-text-align:center;
-color:white;
-font-size:24px;
-font-family: calibri;
-padding-top:25px;
-padding-left:17px;
-}
-
-.educ{
-margin-top: 30px;
-height: 220px;
-width: 33.33%;
-background-color: rgba(70,130,180, 0.2);
-border-radius:15px;
-}
-
-.eductxt{
-text-align:left;
-color:white;
-font-size:23px;
-font-family:calibri;
-padding-top:20px;
-padding-left:17px;
-}
-
-.skills{
-margin-top: 30px;
-height: 220px;
-width: 33.33%;
-background-color: rgba(70,130,180, 0.2);
-float:right;
-border-radius:15px;
-}
-
-.skillstxt{
-text-align:left;
-color:white;
-font-size:23px;
-font-family:calibri;
-padding-left:20px;
-}
-
-.skillsli{
-text-align:left;
-color:white;
-font-size:23px;
-font-family:calibri;
-padding-top:15px;
-padding-left:35px;
-}
-
-.contact{
-margin-top: 30px;
-height: 290px;
-width: 33.33%;
-background-color: rgba(70,130,180, 0.2);
-margin-left:33.33%;
-border-radius:15px;
-}
-
-.contacttxt{
-text-align:center;
-color:white;
-font-size:24px;
-font-family:calibri;
-padding-top:17px;
-}
-
-.pic{
-border-radius:50%;
-background-color: rgba(70,130,180, 0.2);
-float:right;
-width: 250px;
-height: 250px;
-margin-right:100px;
-margin-top:15.5px;
-}
-
-.pictxt{
-text-align:center;
-color:white;
-font-size:40px;
-font-family:calibri;
-padding-left:12px;
-padding-top:11px;
-}
-.dp{
-
-border-radius:50%;
-height:250px;
-width:250px;
-float:left;
-}
-
-
 </style>
 
-</head>
 
- <body class = "backgroundimg">
- 
-<div class = "header">
-<img src="https://image.ibb.co/d4fdec/pic.jpg" alt="pic" class = "dp">
-<p class = "headertext"><b>&nbsp;&nbsp;&nbsp;ADRIAN RODRIGUEZ</b></p>
-
-</div>
-
-<div class = "profile">
-<p class = "profiletxt">
-
-<b><i>Personal Information</b></i><br><br>
-
-
-<b>Date of Birth</b>
-<br>
-November 29, 2001
+<body background="https://www.wallpaperup.com/uploads/wallpapers/2013/12/15/196200/f2c43e4304abcbd78e81c243a33bfb54.jpg">
+<p align="left"> <img src="rafaelmarci.github.io/1SEM8HK.jpg" class="A"> </p>
+<div class="C">
+<p align="center">
+<br><center><font size="10"> Rafael Carlo DL. Marcelino</font><br>
+&nbsp;&nbsp;&nbsp;&nbsp; a.k.a. &nbsp;&nbsp;&nbsp;&nbsp;<br>
+<font size="7" style="unicode_sans"><b> [M A R C I] </b></font>
 <br><br>
-<b>Location</b>
-<br>
-Block 4 Lot 6A Villa Roma Subd.<br>
-Tabe, Guiguinto, Bulacan
+<font size="3">
+097, Golden St., Felicisima Village, <br>
+Mojon, Malolos City, Bulacan <br>
+<b>0942 426 9144 / 791-2342</b><br>
+fritzeidelzech51@gmail.com <br>
+</font>
+</center>
+</font></p>
 
-</p>
-
-</div>
-<div class = "skills">
-<p class = "skillstxt">
-<b><i>Special Skills</i></b>
-<ul class = "skillsli">
-<li>Capable of designing webpages using the HTML5 language</li>
-
-<li>Focused, patient, and persistent</li>
-<li>Exhibits critical thinking skills</li>
-
-<ul>
-
-</p>
-</div>
-<div class = "pic">
-<p class = "pictxt">
-<b>READY <BR> FOR THE <BR> FUTURE</p></b>	
-</div>
-<div class = "educ">
-<p class = "eductxt">
-
-<b><i>Educational Background</b></i><br><br>
-
-<b>Junior High School</b>
-<br>
-Holy Spirit Academy of Malolos<br>
-Bagong Bayan, City of Malolos, Bulacan<br>
-June 2013 - March 2017
-
-<br><br>
-
-
-</p>
 
 </div>
 
-
-<div class = "contact">
-<p class = "contacttxt">
-
-<b><i>Contact Information</b></i><br><br>
-
-<b>Email Address</b>
-<br>
-rdrgzadr@gmail.com<br><br>
-<b>Contact Numbers</B><br>
-+63 943-549-2275<br>
-+63 998-086-3452
-
-
-
-
-</p>
+<div class="D">
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><center><font style="unicode_sans" size="7"> [E D U C A T I O N] </font></center></b>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Finished Junior Highschool in Holy Spirit Academy of Malolos
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Maria Helenna Stollenwerk Service Awardee
+<br><br><br><br>
+<b><center><font style="unicode_sans" size="7"> [S K I L L S] </font></center></b>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Proficient with CS6, GIMP 2, and Sony Vegas Pro
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Basic PC and Network Troubleshooting
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Proficient with Notepad++, Powershell, CMD
 
 </div>
 
 
 
-<div class = "quotediv">
-<p class = "quote">
-<i>"You have to perform at a consistently higher level than others. That's the mark of a true professional."</i> - Joe Paterno
-</p>
+<div class="E">
+
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><center><font style="unicode_sans" size="7"> [A B O U T] </font></center></b>
+
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Birthday: </b> November 7, 2000
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Age: </b> 17
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Likes: </b> Gaming, Philosophy, History
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Relationship Status: </b> I own Cara, back off... 
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Steam: </b> https://www.steamcommunity.com/id/OSIRIS51
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> Facebook: </b> https://www.facebook.com/osiris51
+
+
+
+
 </div>
 </body>
+
+
+
 </html>
+
